# tera_api

./: .gitignore  .pre-commit-config.yaml  README.md  live.sql  proxyList.txt  pyproject.toml  recommendation.txt  requirements.dev.txt  requirements.txt
main/: db.json  requirements.dev.txt  requirements.txt
main/main/: settings.py  urls.py
main/ra/: admin.py  forms.py  links.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
main/ra/migrations/: 0001_initial.py  0002_auto_20211120_1951.py  0002_auto_20220123_1459.py  0003_auto_20211120_2040.py  0004_auto_20211122_0047.py  0005_auto_20211122_1610.py  0006_auto_20211122_2136.py  0007_auto_20211129_1819.py
main/ra/templates/: 1.html  3.html  (+16 more)
sites/: Browse journals and books _ ScienceDirect.com.html  Search.html  searchresults.html  sites.txt
sites/Browse journals and books _ ScienceDirect.com_files/: HO2LeBY9e2O2ByqxohBoTlWuwMA.guide.css  RCa16d232f95a944c0aabdea6621a2ef94-source.min.js.download  client.js.download  d6c1d995-bc7e-4e53-77f1-2ea4ecbb9565  d6c1d995-bc7e-4e53-77f1-2ea4ecbb9565(1)  d6c1d995-bc7e-4e53-77f1-2ea4ecbb9565(2)  gpt.js.download  launch-a6263b31083f.min.js.download  pendo.js.download  sb-ap3qqkSNRPA9FUbEX7AwXP_8.guide.css  style.css
sites/Search_files/: 2e4b93d1-a8ae-4a89-8885-6109135ac0de-web.js.download  airbrake-es5-bundle-c511f2d334.js.download  app-es5-bundle-3bb6953da3.js.download  app-es6-bundle-a1816b13fc.js.download  enhanced-6ccd0b8a42.css  gtm.js.download  hm.js.download  polyfill-es5-bundle-89291fd01c.js.download
z_bakcup.py/: a.py  views.py  wa.py
(+20 files in other folders)
