[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.8"
djangorestframework = "^3.12.4"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
